# proyecto-labdic

./: .gitignore  README.md
app-backend/: alembic.ini  pyproject.toml  seed.py
app-backend/alembic/: env.py
app-backend/alembic/versions/: 20250725_1139-32ec1bb6f9f4_init_inventory.py  20250728_1001-3e4c6a318f6b_add_is_admin_to_user.py  20260225_2050-e6adcacbbec2_parche_1_2_a_app_models_inventory_py.py  20260310_0332-f6658e72ebb2_parche_1_3_a_app_models_inventory_py_.py  20260311_0927-e4d746f30449_parche_1_4_generando_userroles_como_orm_.py  20260315_0045-070dac9706ea_parche_1_5_add_cascade_delete_device_.py  20260315_1255-4116c1a4da85_parche_1_6_add_cascade_delete_loan_.py  20260315_1444-94aead30868b_parche_1_7_modificated_device_optional_.py  20260315_1445-b26801b2ddb0_parche_1_7_0_nada.py  20260315_2045-6970f4e12ed7_parche_1_8_add_cascade_delete_loan_.py
app-backend/app/: config.py  database.py  main.py  security.py
app-backend/app/debug/: script.py
app-backend/app/models/: inventory.py
app-backend/app/services/labdic_inventory/: router.py
app-backend/app/services/labdic_inventory/auth/: controllers.py
app-backend/app/services/labdic_inventory/catalog/: controllers.py  dtos.py  repositories.py
app-backend/app/services/labdic_inventory/device/: controllers.py  dtos.py  repositories.py
app-backend/app/services/labdic_inventory/loan/: controllers.py  dtos.py  repositories.py
app-backend/app/services/labdic_inventory/product/: controllers.py  dtos.py  repositories.py
app-backend/app/services/labdic_inventory/role/: controllers.py  dtos.py  (+1 more)
(+124 files in other folders)
