[project]
name = "app-backend"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "litestar[sqlalchemy,standard,structlog,jwt]>=2.16.0",
    "pwdlib[argon2]>=0.2.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "just-bin>=1.40.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["F", "W", "E", "I", "A", "B", "N"]
